// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-pragma.json5 - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["json5"]
requirePragma: true
                                                      printWidth: 80 (default) |
=====================================input======================================
/** @format */

{hello:       "world"}

=====================================output=====================================
/** @format */

{ hello: "world" }

================================================================================
`;

exports[`without-pragma.json5 - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["json5"]
requirePragma: true
                                                      printWidth: 80 (default) |
=====================================input======================================
{hello:       "world"}

=====================================output=====================================
{hello:       "world"}

================================================================================
`;
